fixed bullet point styling on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2921,6 +2921,17 @@ input, select, textarea {
 				text-align: center;
 			}
 
+			/* Fix bullet point alignment on mobile */
+			.wrapper.special-alt ul {
+				text-align: left;
+				list-style-position: inside;
+			}
+
+			.wrapper.special-alt ul li {
+				text-align: left;
+				padding-left: 0;
+			}
+
 			.wrapper.style4 {
 				padding-bottom: 3em;
 			}
